Optimise boot time